--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -13,9 +13,9 @@
       institution: University of Edinburgh
       year: 2019 - 2023
       description:
-        - Master's Project: deriving the Reissner-Nordström metric from scattering amplitudes in quantum field theory under Prof. Donal O'Connell
-        - Relevant courses: Quantum Field Theory, General Relativity, Gauge Theories in Particle Physics, Advanced Statistical Physics
-        - Awards: Certificate of Merit for excellent performance, Edinburgh Award for Representing Students
+        - "*Master's Project:* deriving the Reissner-Nordström metric from scattering amplitudes in quantum field theory under Prof. Donal O'Connell"
+        - "*Relevant courses:* Quantum Field Theory, General Relativity, Gauge Theories in Particle Physics, Advanced Statistical Physics"
+        - "*Awards:* Certificate of Merit for excellent performance, Edinburgh Award for Representing Students"
     - title: Exchange student
       institution: California Institute of Technology, Pasadena, California, US
       year: 2021 - 2022
